# brain-ag

./: .gitignore  Dockerfile  README.md  db.json  db.sqlite3  docker-compose.yaml  entrypoint.sh  env.example  pyproject.toml
core/: settings.py  urls.py
rural_producers/: apps.py  filters.py  managers.py  paginations.py  serializers.py  signals.py  urls.py  views.py
rural_producers/application/: create_produtor_usecase.py  update_produtor_usecase.py
rural_producers/application/dto/: cultura.py  produtor.py  propriedade.py  safra.py
rural_producers/domain/: cultura.py  produtor.py  propriedade_rural.py  safra.py
rural_producers/domain/values_objects/: documento_identificacao.py  email.py  telefone.py
rural_producers/infra/api/: paginations.py  serializers.py  urls.py  views.py
rural_producers/infra/repository/: produtor_repository.py
rural_producers/migrations/: 0001_initial.py
rural_producers/models/: __init__.py  cultura.py  produtor.py  propriedade_rural.py  safra.py
tests/: conftest.py  tests.py
